<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".setting.view.SettingFragment">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="461dp"
        android:layout_height="398dp"
        android:layout_marginBottom="572dp"
        android:src="@drawable/sbackgrounduicrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:layout_height="62dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/sett"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/backdirectionicon"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="166dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/lang"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="388dp"
        android:layout_height="93dp"
        android:layout_marginTop="12dp"
        android:elevation="15dp"
        app:cardBackgroundColor="#FDF8FF"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/english"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/eng"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/arabic"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/Arabic"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/english" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switcheng"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toEndOf="@+id/english"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switcharb"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:layout_marginTop="52dp"
                android:thumb="@drawable/thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toEndOf="@+id/arabic"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="166dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="392dp"
        android:layout_height="81dp"
        android:layout_marginTop="12dp"
        android:elevation="15dp"
        app:cardBackgroundColor="#FDF8FF"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/GPS"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/gps"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/MAP"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/map"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GPS" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchgps"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:thumb="@drawable/thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toEndOf="@+id/GPS"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchmap"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:layout_marginTop="52dp"
                android:thumb="@drawable/thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toEndOf="@+id/MAP"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="247dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/units"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="388dp"
        android:layout_height="127dp"
        android:elevation="15dp"
        app:cardBackgroundColor="#FDF8FF"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.07999998">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cels"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/celsius"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kel"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/kelvin"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cels"
                app:layout_constraintVertical_bias="0.076" />

            <TextView
                android:id="@+id/fehr"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/fahrenheit"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cels"
                app:layout_constraintVertical_bias="0.923" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchcels"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toEndOf="@+id/cels"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchkel"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:layout_marginTop="52dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toEndOf="@+id/kel"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchfehr"
                android:layout_width="74dp"
                android:layout_height="24dp"
                android:layout_marginTop="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.874"
                app:layout_constraintStart_toEndOf="@+id/fehr"
                app:layout_constraintTop_toBottomOf="@+id/switchkel"
                app:layout_constraintVertical_bias="0.1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="247dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crete_round"
        android:text="@string/alerts"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="385dp"
        android:layout_height="50dp"
        android:elevation="15dp"
        app:cardBackgroundColor="#FDF8FF"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.43">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/notificationTxt"
                android:layout_width="159dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/titillium_web"
                android:text="@string/enable"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchnotif"
                android:layout_width="74dp"
                android:layout_height="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.872"
                app:layout_constraintStart_toEndOf="@+id/notificationTxt"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>